@@ -65,7 +65,7 @@ struct __texture_wrapper
 	u32 conv_format, conv_w, conv_h;
 
 	/*gl textures vars (gl_type: 2D texture or rectangle (NV ext) )*/
-	u32 nb_comp, gl_format, gl_type;
+	u32 nb_comp, gl_format, gl_type, gl_dtype;
 #endif
 #ifdef GPAC_TRISCOPE_MODE
 	char *depth_data;
@@ -200,6 +200,8 @@ void gf_sc_texture_disable(GF_TextureHandler *txh)
 Bool tx_can_use_rect_ext(GF_Compositor *compositor, GF_TextureHandler *txh)
 {
 	u32 i, count;
+
+//	compositor->gl_caps.yuv_texture = 0;
 	if (!compositor->gl_caps.rect_texture) return 0;
 	if (!compositor->disable_rect_ext) return 1;
 	/*this happens ONLY with text texturing*/
@@ -256,6 +258,7 @@ static Bool tx_setup_format(GF_TextureHandler *txh)
 	if (!use_rect && !compositor->gl_caps.npot_texture && !is_pow2) txh->tx_io->flags = TX_MUST_SCALE;
 
 	txh->tx_io->nb_comp = txh->tx_io->gl_format = 0;
+	txh->tx_io->gl_dtype = GL_UNSIGNED_BYTE;
 	switch (txh->pixelformat) {
 	case GF_PIXEL_GREYSCALE:
 		txh->tx_io->gl_format = GL_LUMINANCE;
@@ -284,9 +287,15 @@ static Bool tx_setup_format(GF_TextureHandler *txh)
 		txh->tx_io->nb_comp = 4;
 		break;
 	case GF_PIXEL_YV12:
-		if (!use_rect && compositor->emul_pow2) txh->tx_io->flags = TX_EMULE_POW2;
-		txh->tx_io->gl_format = GL_RGB;
-		txh->tx_io->nb_comp = 3;
+		if (!compositor->disable_yuvgl && compositor->gl_caps.yuv_texture && !(txh->tx_io->flags & TX_MUST_SCALE) ) {
+			txh->tx_io->gl_format = compositor->gl_caps.yuv_texture;
+			txh->tx_io->nb_comp = 3;
+			txh->tx_io->gl_dtype = UNSIGNED_SHORT_8_8_MESA;
+		} else {
+			if (!use_rect && compositor->emul_pow2) txh->tx_io->flags = TX_EMULE_POW2;
+			txh->tx_io->gl_format = GL_RGB;
+			txh->tx_io->nb_comp = 3;
+		}
 		break;
 	default:
 		return 0;
@@ -312,13 +321,19 @@ static Bool tx_setup_format(GF_TextureHandler *txh)
 	}
 #else
 
-#ifdef GPAC_USE_TINYGL
-	glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_S, GL_REPEAT);
-	glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_T, GL_REPEAT);
-#else
-	glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_S, (txh->flags & GF_SR_TEXTURE_REPEAT_S) ? GL_REPEAT : GL_CLAMP);
-	glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_T, (txh->flags & GF_SR_TEXTURE_REPEAT_T) ? GL_REPEAT : GL_CLAMP);
+#ifndef GPAC_USE_TINYGL
+	if (txh->tx_io->gl_type == GL_TEXTURE_2D) {
+		glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_S, (txh->flags & GF_SR_TEXTURE_REPEAT_S) ? GL_REPEAT : GL_CLAMP);
+		glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_T, (txh->flags & GF_SR_TEXTURE_REPEAT_T) ? GL_REPEAT : GL_CLAMP);
+	} else
 #endif
+	{
+		glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_S, GL_REPEAT);
+		glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_T, GL_REPEAT);
+	}
+	glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_S, GL_CLAMP_TO_EDGE);
+	glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_WRAP_T, GL_CLAMP_TO_EDGE);
+
 	if (txh->tx_io->gl_type == GL_TEXTURE_2D) {
 		glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_MAG_FILTER, txh->compositor->high_speed ? GL_NEAREST : GL_LINEAR);
 		glTexParameteri(txh->tx_io->gl_type, GL_TEXTURE_MIN_FILTER, txh->compositor->high_speed ? GL_NEAREST : GL_LINEAR);
@@ -328,7 +343,6 @@ static Bool tx_setup_format(GF_TextureHandler *txh)
 	}
 #endif
 	glPixelStorei(GL_UNPACK_ALIGNMENT, 1);
-
 	glDisable(txh->tx_io->gl_type);
 	return 1;
 }
@@ -337,8 +351,46 @@ char *gf_sc_texture_get_data(GF_TextureHandler *txh, u32 *pix_format)
 {
 	char *data = txh->tx_io->conv_data;
 	*pix_format = txh->tx_io->conv_format;
-	if (*pix_format == txh->pixelformat) data = txh->data;
+	if (*pix_format == txh->pixelformat) return txh->data;
 	return data;
+}
+
+void txh_unpack_yuv(GF_TextureHandler *txh)
+{
+	u32 i, j;
+	u8 *dst, *y, *u, *v, *p_y, *p_u, *p_v;
+	if (!txh->tx_io->conv_data) {
+		txh->tx_io->conv_data = (char*)malloc(sizeof(char) * 2 * txh->width * txh->height);
+	}
+	p_y = txh->data;
+	p_u = txh->data + txh->stride*txh->height;
+	p_v = txh->data + 5*txh->stride*txh->height/4;
+
+	/*convert to UYVY and flip texture*/
+	for (i=0; i<txh->height; i++) {
+		u32 idx = txh->height-i-1;
+		y = p_y + idx*txh->stride;
+		u = p_u + (idx/2) * txh->stride/2;
+		v = p_v + (idx/2) * txh->stride/2;
+		dst = txh->tx_io->conv_data + 2*i*txh->stride;
+
+		for (j=0; j<txh->width/2;j++) {
+			*dst = *u;
+			dst++;
+			u++;
+			*dst = *y;
+			dst++;
+			y++;
+			*dst = *v;
+			dst++;
+			v++;
+			*dst = *y;
+			dst++;
+			y++;
+		}
+	}
+	/*remove GL texture flip*/
+	txh->flags |= GF_SR_TEXTURE_NO_GL_FLIP;
 }
 
 /*note about conversion: we consider that a texture without a stream attached is generated by the compositor
@@ -361,6 +413,12 @@ Bool tx_convert(GF_TextureHandler *txh)
 		txh->tx_io->flags |= TX_NEEDS_HW_LOAD;
 		return 1;
 	case GF_PIXEL_YV12:
+		if (txh->tx_io->gl_format == compositor->gl_caps.yuv_texture) {
+			txh->tx_io->conv_format = GF_PIXEL_YVYU;
+			txh->tx_io->flags |= TX_NEEDS_HW_LOAD;
+			txh_unpack_yuv(txh);
+			return 1;
+		}
 		break;
 	default:
 		txh->tx_io->conv_format = 0;
@@ -463,28 +521,33 @@ Bool gf_sc_texture_push_image(GF_TextureHandler *txh, Bool generate_mipmaps, Boo
 		w = txh->width;
 		h = txh->height;
 	}
-	tx_mode = txh->tx_io->nb_comp;
 #ifdef GPAC_USE_OGL_ES
 	tx_mode = txh->tx_io->gl_format;
+#else
+	tx_mode = txh->tx_io->nb_comp;
+	if (txh->tx_io->conv_format==GF_PIXEL_YVYU) {
+		tx_mode = txh->tx_io->gl_format;
+	}
 #endif
 
 #ifdef GPAC_USE_TINYGL
-	glTexImage2D(txh->tx_io->gl_type, 0, tx_mode, w, h, 0, txh->tx_io->gl_format, GL_UNSIGNED_BYTE, (unsigned char *) data);
+	glTexImage2D(txh->tx_io->gl_type, 0, tx_mode, w, h, 0, txh->tx_io->gl_format, txh->tx_io->gl_dtype, (unsigned char *) data);
 
 #else
 
 	/*pow2 texture or hardware support*/
 	if (! (txh->tx_io->flags & TX_MUST_SCALE) ) {
 		if (first_load) {
-			glTexImage2D(txh->tx_io->gl_type, 0, tx_mode, w, h, 0, txh->tx_io->gl_format, GL_UNSIGNED_BYTE, (unsigned char *) data);
+			glTexImage2D(txh->tx_io->gl_type, 0, tx_mode, w, h, 0, txh->tx_io->gl_format, txh->tx_io->gl_dtype, (unsigned char *) data);
+
 		} else {
-			glTexSubImage2D(txh->tx_io->gl_type, 0, 0, 0, w, h, txh->tx_io->gl_format, GL_UNSIGNED_BYTE, (unsigned char *) data);
+			glTexSubImage2D(txh->tx_io->gl_type, 0, 0, 0, w, h, txh->tx_io->gl_format, txh->tx_io->gl_dtype, (unsigned char *) data);
 		}
 	} else {
 
 #ifdef GPAC_HAS_GLU
 		if (!txh->compositor->disable_glu_scale) {
-			gluScaleImage(txh->tx_io->gl_format, txh->width, txh->height, GL_UNSIGNED_BYTE, data, txh->tx_io->rescale_width, txh->tx_io->rescale_height, GL_UNSIGNED_BYTE, txh->tx_io->scale_data);
+			gluScaleImage(txh->tx_io->gl_format, txh->width, txh->height, txh->tx_io->gl_dtype, data, txh->tx_io->rescale_width, txh->tx_io->rescale_height, txh->tx_io->gl_dtype, txh->tx_io->scale_data);
 		} else 
 #endif
 		{
@@ -506,9 +569,9 @@ Bool gf_sc_texture_push_image(GF_TextureHandler *txh, Bool generate_mipmaps, Boo
 		}
 
 		if (first_load) {
-			glTexImage2D(txh->tx_io->gl_type, 0, tx_mode, txh->tx_io->rescale_width, txh->tx_io->rescale_height, 0, txh->tx_io->gl_format, GL_UNSIGNED_BYTE, txh->tx_io->scale_data);
+			glTexImage2D(txh->tx_io->gl_type, 0, tx_mode, txh->tx_io->rescale_width, txh->tx_io->rescale_height, 0, txh->tx_io->gl_format, txh->tx_io->gl_dtype, txh->tx_io->scale_data);
 		} else {
-			glTexSubImage2D(txh->tx_io->gl_type, 0, 0, 0, txh->tx_io->rescale_width, txh->tx_io->rescale_height, txh->tx_io->gl_format, GL_UNSIGNED_BYTE, txh->tx_io->scale_data);
+			glTexSubImage2D(txh->tx_io->gl_type, 0, 0, 0, txh->tx_io->rescale_width, txh->tx_io->rescale_height, txh->tx_io->gl_format, txh->tx_io->gl_dtype, txh->tx_io->scale_data);
 		}
 	}
 #endif
@@ -649,8 +712,9 @@ Bool gf_sc_texture_get_transform(GF_TextureHandler *txh, GF_Node *tx_transform, 
 		ret = 1;
 	}
 
-	/*WATCHOUT: GL_TEXTURE-RECTANGLE coords are w, h not 1.0, 1.0*/
+	/*WATCHOUT: GL_TEXTURE_RECTANGLE coords are w, h not 1.0, 1.0*/
 	if (txh->tx_io->flags & TX_IS_RECT) {
+
 		gf_mx_add_scale(mx, INT2FIX(txh->width), INT2FIX(txh->height), FIX_ONE);
 		/*disable any texture transforms when using RECT textures (no repeat) ??*/
 		/*tx_transform = NULL;*/
